<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/instructions" />
    <FrameLayout
        android:id="@+id/fl_water_increment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <ImageButton
            android:id="@+id/ib_water_increment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="incrementWater"
            android:contentDescription="@string/water_increment_content_description"
            android:scaleType="fitCenter"
            android:padding="7dp"
            android:src="@drawable/ib_image"
            android:background="?attr/selectableItemBackgroundBorderless"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
<!--            Centering TextView within Image, count number display-->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="64"
                android:visibility="invisible" />
            <TextView
                android:id="@+id/tv_water_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_water_count"
                android:textColor="@color/default_color"
                android:textSize="35sp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="36"
                android:visibility="invisible" />
        </LinearLayout>
    </FrameLayout>
    <RelativeLayout
        android:id="@+id/rl_charge_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <ImageView
            android:id="@+id/iv_power_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/charging_image_descripton"
            android:src="@drawable/iv_charger_off" />
        <TextView
            android:id="@+id/tv_charging_reminder_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@+id/iv_power_increment"
            android:layout_toRightOf="@+id/iv_power_increment"
            android:text="@string/default_charge_notification_count" />
    </RelativeLayout>

</LinearLayout>